--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+
 <body class="dark-theme">
 
-   <header class="header">
+    <header class="header">
         <nav class="navbar">
             <div class="logo">NextLab</div>
             <ul class="nav-menu">
                 <li><a href="index.html" id="inicio">Inicio</a></li>
-                <li><a href="galeria.html" id="galeria">Galeria</a></li>
-                <li><a href="contacto.html" id="contacto">Contacto</a></li>
-                <li><a href="acerca.html" id="acerca-de">Acerca de</a></li>
+                <li><a href="pages/galeria.html" id="galeria">Galeria</a></li>
+                <li><a href="pages/contacto.html" id="contacto">Contacto</a></li>
+                <li><a href="pages/acerca.html" id="acerca-de">Acerca de</a></li>
             </ul>
         </nav>
     </header>
@@ -40,8 +42,8 @@
                         <li data-bs-target="#carouselId" data-bs-slide-to="2" aria-label="Third slide"></li>
                         <li data-bs-target="#carouselId" data-bs-slide-to="3" aria-label="Fourth slide"></li>
                         <li data-bs-target="#carouselId" data-bs-slide-to="4" aria-label="Fifth slide"></li>
-                    
-                        
+
+
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
@@ -65,31 +67,31 @@
                                 <p>La banda más boleta de Venezuela en la actualidad </p>
                             </div>
                         </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="IMG/latin.png" class="w-100 d-block" alt="Concierto Rawi" />
-                            <div class="carousel-caption">
-                                <h3>LATIN MAFIA</h3>
-                                <p>Ven a cantar "Siento que merezco más" con el corazón en la mano</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="IMG/ferxxo.png" class="w-100 d-block" alt="Concierto Rawi" />
-                            <div class="carousel-caption">
-                                <h3>EL FERXXO</h3>
-                                <p>Lo mejor de la música urbana mor</p>
-                            </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="IMG/latin.png" class="w-100 d-block" alt="Concierto Rawi" />
+                        <div class="carousel-caption">
+                            <h3>LATIN MAFIA</h3>
+                            <p>Ven a cantar "Siento que merezco más" con el corazón en la mano</p>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    <div class="carousel-item">
+                        <img src="IMG/ferxxo.png" class="w-100 d-block" alt="Concierto Rawi" />
+                        <div class="carousel-caption">
+                            <h3>EL FERXXO</h3>
+                            <p>Lo mejor de la música urbana mor</p>
+                        </div>
+                    </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
             </div>
         </section>
 
@@ -104,7 +106,7 @@
                         <div class="service-image">
                             <img src="IMG/concierto.png" alt="Conciertos">
                         </div>
-                        <a href="conciertos.html" class="btn btn-primary">Ver más</a>
+                        <a href="pages/conciertos.html" class="btn btn-primary">Ver más</a>
                     </div>
 
                     <div class="service-card">
@@ -114,17 +116,18 @@
                         <div class="service-image">
                             <img src="IMG/calendario.png" alt="Calendario">
                         </div>
-                        <a href="calendario.html" class="btn btn-primary">Ver calendario</a>
+                        <a href="pages/calendario.html" class="btn btn-primary">Ver calendario</a>
                     </div>
 
                     <div class="service-card">
                         <div class="service-icon">💥</div>
                         <h3>Ofertas y Paquetes</h3>
-                        <p>Aprovecha promociones exclusivas en boletos y combos especiales para vivir experiencias únicas.</p>
+                        <p>Aprovecha promociones exclusivas en boletos y combos especiales para vivir experiencias
+                            únicas.</p>
                         <div class="service-image">
                             <img src="IMG/ofertas.png" alt="Ofertas">
                         </div>
-                        <a href="ofertas.html" class="btn btn-primary">Ver ofertas</a>
+                        <a href="pages/ofertas.html" class="btn btn-primary">Ver ofertas</a>
                     </div>
                 </div>
             </div>
@@ -153,4 +156,5 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
